# polaris_mcp

./: README.md  pyproject.toml
data/: country_mapping.json  polaris_criteria.json
polaris_mcp/: .gitignore  README.md
polaris_mcp/data/: sample_korea.csv
polaris_mcp/src/partner_polaris_mcp/: __init__.py  benchmark.py  data_loader.py  server.py
src/: __main__.py
src/partner_polaris_mcp/: gap_analyzer.py  models.py  polaris_engine.py  server.py
